// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/nav-sidebar/NavListCollapseHeader should properly render any container properties 1`] = `
<div
  a={1}
  className="nav-list-collapse-header"
  snake-case={2}
>
  heading w/ containerProps
  <PlainButton
    className="nav-list-collapse"
    onClick={[Function]}
    type="button"
  >
    <IconCaretDown
      width={8}
    />
  </PlainButton>
</div>
`;

exports[`components/nav-sidebar/NavListCollapseHeader should render collapsible header 1`] = `
<div
  className="nav-list-collapse-header"
>
  text heading
  <PlainButton
    className="nav-list-collapse"
    onClick={[Function]}
    type="button"
  >
    <IconCaretDown
      width={8}
    />
  </PlainButton>
</div>
`;
